fix(item-tile): turned the components into alpha, fixed spacing

--- a/src/sass/item-tile/item-tile.scss
+++ b/src/sass/item-tile/item-tile.scss
@@ -38,7 +38,7 @@
         "section-primary"
         "section-secondary"
         "section-tertiary";
-    grid-template-rows: 25px 1fr 1fr;
+    grid-template-rows: 25px 0.75fr 1fr;
 }
 
 .item-tile--list-view .item-tile__header {
